Add Rosie Taylor to authors [rev: dan.grayling]

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "Matthew Gordon <matthew.gordon@hpe.com>",
     "Alex Scown <alex.scown@hpe.com>",
     "Daniel Grayling <daniel.grayling@hpe.com>",
-    "Will Byrne <will.byrne@hpe.com>"
+    "Will Byrne <will.byrne@hpe.com>",
+    "Rosie Taylor <rosie.taylor@hpe.com>"
   ],
   "repository": {
     "type": "git",
