--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "Alex Scown <alex.scown@hpe.com>",
     "Daniel Grayling <daniel.grayling@hpe.com>",
     "Will Byrne <will.byrne@hpe.com>",
-    "Rosie Taylor <rosie.taylor@hpe.com>"
+    "Rosie Taylor <rosie.taylor@hpe.com>",
+    "Wojciech Kaluza <wojciech.kaluza@hpe.com>"
   ],
   "repository": {
     "type": "git",
@@ -29,7 +30,7 @@
   ],
   "dependencies": {
     "backbone": "1.2.3",
-    "hp-autonomy-fieldtext-js": "1.3.0",
+    "hp-autonomy-fieldtext-js": "1.4.0",
     "requirejs": "2.2.0",
     "underscore": "1.8.3"
   },
