--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "hp-autonomy-js-parametric-refinement",
-  "description": "Backbone components for HP Haven parametric refinement",
+  "description": "Parametric refinement Backbone components",
   "license": "MIT",
   "authors": [
     "Matthew Gordon <matthew.gordon@hpe.com>",
@@ -19,8 +19,9 @@
   ],
   "keywords": [
     "parametric",
-    "hp",
-    "haven"
+    "hpe",
+    "find",
+    "idol"
   ],
   "ignore": [
     "**/.*",
@@ -29,16 +30,17 @@
     "test"
   ],
   "dependencies": {
-    "backbone": "1.2.3",
-    "hp-autonomy-fieldtext-js": "1.4.0",
-    "requirejs": "2.2.0",
+    "backbone": "1.3.3",
+    "hp-autonomy-fieldtext-js": "1.5.0",
+    "moment": "2.18.1",
+    "requirejs": "2.3.3",
     "underscore": "1.8.3"
   },
   "devDependencies": {
     "jquery": "components/jquery#1.10.2"
   },
   "resolutions": {
-    "underscore": "1.8.3",
-    "requirejs": "2.2.0"
+    "requirejs": "2.3.3",
+    "underscore": "1.8.3"
   }
 }
