rebranding: company names

--- a/bower.json
+++ b/bower.json
@@ -3,12 +3,12 @@
   "description": "Parametric refinement Backbone components",
   "license": "MIT",
   "authors": [
-    "Matthew Gordon <matthew.gordon@hpe.com>",
-    "Alex Scown <alex.scown@hpe.com>",
-    "Daniel Grayling <daniel.grayling@hpe.com>",
-    "Will Byrne <will.byrne@hpe.com>",
-    "Rosie Taylor <rosie.taylor@hpe.com>",
-    "Wojciech Kaluza <wojciech.kaluza@hpe.com>"
+    "Matthew Gordon",
+    "Alex Scown",
+    "Daniel Grayling",
+    "Will Byrne",
+    "Rosie Taylor",
+    "Wojciech Kaluza"
   ],
   "repository": {
     "type": "git",
