[US16452] upgrade dependency versions

--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
   "name": "hp-autonomy-js-parametric-refinement",
+  "version": "2.1.0",
   "private": true,
+  "dependencies": {
+    "backbone": "1.2.3",
+    "hp-autonomy-fieldtext-js": "opentext-idol/fieldtext-js#1.7.0",
+    "moment": "2.29.4",
+    "pegjs": "opentext-idol/pegjs#0.10.0",
+    "requirejs": "2.3.3",
+    "requirejs-text": "2.0.15",
+    "underscore": "1.13.6"
+  },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-jasmine": "^1.0.3",
-    "grunt-contrib-jshint": "^0.11.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-gh-pages": "^0.10.0",
-    "grunt-jsdoc": "^0.6.8",
-    "grunt-template-jasmine-istanbul": "^0.3.4",
-    "grunt-template-jasmine-requirejs": "^0.2.3",
-    "ink-docstrap": "^0.4.12"
+    "grunt": "^1.3.0",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-connect": "^3.0.0",
+    "grunt-contrib-jasmine": "^3.0.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-jsdoc": "^2.1.0",
+    "grunt-template-jasmine-istanbul": "^0.4.0",
+    "grunt-template-jasmine-requirejs": "https://github.com/cloudchen/grunt-template-jasmine-requirejs#e5770cd8a75f88e5e09a5f2d4f389ec23bb2dad2",
+    "ink-docstrap": "^0.4.12",
+    "jquery": "3.7.1"
   }
 }
